--- a/_doc/index.html
+++ b/_doc/index.html
@@ -7,6 +7,7 @@
 <body>
 <a href="../../../../doc/src/build_scripts__targets/index.html" style="font-size=2em;color:#ffa;border:1px solid #f60;border-radius:5px;">К документации Тралива</a>
 <h1>Сборочные скрипты Traliva platforms. Standard.</h1>
-<p></p>
+<h2>ubuntu_desktop</h2>
+<p>Генерирует исходники проекта на Qt4. Писалось для сборки под Ubuntu. Проект может быть собран под десктопный Linux, MacOS. Проект не может быть собран под Windows.</p>
 </body>
 </html>
