--- a/web_django/t/index.html
+++ b/web_django/t/index.html
@@ -1,15 +1,17 @@
-<!doctype html>
+{% load static %}<!doctype html>
 <html>
 <head>
 <meta charset="utf-8"/>
+<title>title</title>
 <!--<meta content='width=device-width, initial-scale=1' name='viewport'/>-->
 <meta content='width=500, initial-scale=0.5' name='viewport'/>
-<title>Пишем веб-приложение на Django</title>
-<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+<!--<meta name="viewport" content="width=device-width; user-scalable=0;" />-->
+<link href="{% static 'root_app/style.css' %}" rel="stylesheet"/>[ code here: favicon ]
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet"/>
 </head>
 <body>
-gggggggggg
+<noscript> Для работы сайта необходимо, чтобы поддержка JavaScript не была отключена.</noscript>
+<script src="{% static 'root_app/gameplay.js' %}"></script>
 </body>
 </html>
