--- a/web_django/t/index.html
+++ b/web_django/t/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <!--<meta content='width=device-width, initial-scale=1' name='viewport'/>-->
-<meta content='width=500, initial-scale=0.5' name='viewport'/>
-<!--<meta name="viewport" content="width=device-width; user-scalable=0;" />-->
+<!--<meta content='width=500, initial-scale=0.5' name='viewport'/>-->
+<meta name="viewport" content="width=device-width; user-scalable=0;" />
 <link href="{% static 'root_app/style.css' %}" rel="stylesheet"/>[ code here: favicon ]
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet"/>
