develop-v2.2: web_django: fonts added

--- a/web_django/t/index.html
+++ b/web_django/t/index.html
@@ -8,6 +8,7 @@
 <link href="{% static 'root_app/style.css' %}" rel="stylesheet"/>[ code here: favicon ]
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css?family=Alice|Gabriela|Lobster|Marck+Script|Pangolin|Pattaya|Ubuntu" rel="stylesheet">
 </head>
 <body>
 <noscript> Для работы сайта необходимо, чтобы поддержка JavaScript не была отключена.</noscript>
